Ajustes no doc swagger
